fix(tooltips): ensure content is left-aligned

--- a/scss/_tooltip.scss
+++ b/scss/_tooltip.scss
@@ -110,7 +110,6 @@
   max-width: $tooltip-max-width;
   padding: $tooltip-padding-y $tooltip-padding-x;
   color: $tooltip-color;
-  text-align: center;
   background-color: $tooltip-bg;
   @include border-radius($tooltip-border-radius);
 }
